<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
        android:title="@string/doctors_title"/>

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical" android:padding="16dp"
        android:layout_marginTop="?attr/actionBarSize">

        <TextView
            android:id="@+id/tvSpecialtyHeader"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/doctors_of"
            android:textAppearance="?attr/textAppearanceTitleMedium" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSearchDoc"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSearchDoc"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:hint="@string/search_doctor_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDoctors"
            android:layout_width="match_parent" android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
